unpackaged/main/default/objects/Program__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Program</relationshipLabel>
    <relationshipName>Program</relationshipName>
    <type>Lookup</type>
</CustomField>