unpackaged/main/default/objects/Program__c/fields/Latest_Notes__c.field-meta.xml
<CustomField>
    <fullName>Latest_Notes__c</fullName>
    <label>Latest Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>