unpackaged/main/default/objects/Program__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Program ID</label>
    <type>AutoNumber</type>
</CustomField>