unpackaged/main/default/objects/Program__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Completion__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>Health__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>